# osgqtquick

./: CMakeLists.txt
cmake/: FindOsgEarth.cmake
src/: CMakeLists.txt
src/debugger/: CMakeLists.txt  main.cpp
src/imports/: CMakeLists.txt
src/qml/: CMakeLists.txt
src/qml/osgga/: cameramanipulator.cpp
src/qml/osgtext/: text3d.cpp
tests/: earth.qml
